# amazon-price-tracker

./: pyproject.toml  scrapper.py
