[tool.poetry]
name = "amazon-price-tracker"
version = "0.1.0"
description = ""
authors = ["Kirat Bains <kiratbains09@gmail.com>"]
readme = "README.md"
packages = [{include = "amazon_price_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
